# stm32f4-trackpoint-mouse

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: lib.rs  trackpoint.rs
