[package]
authors = ["Chris Chen <gzerone@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "trackpoint-mouse"
version = "0.1.2"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.17.1", features = ["rt", "stm32f401", "usb_fs"] }
usb-device = "0.2.9"
usbd-hid = "0.6.1"

[dependencies.stm32f4]
features = ["stm32f401", "rt"]
version = "0.15.1"

[[bin]]
name = "trackpoint_mouse"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
